# MachineLearningPrac

./: .gitignore  README.md  _test_indices.pth  data_analysis.py  download_img.py  evaluation.py  main.py  model.py  pre_precessing.py  pyproject.toml  test__test_indices.pth  train_loop.py
MNIST/: download_dataset.py
cat_n_dog/: cat_test_indices.pth  dataset_split.json  dog_test_indices.pth  evaluation.py  main.py  model.py  parameter.py  preprocessing.py  split_data.py  test.py  train.py  train_loop.py  visualization.py
cat_n_dog/conf/: config.yaml  wandb.yaml
cat_n_dog/conf/dataset/: cat_n_dog.yaml
cat_n_dog/conf/model/: cnn.yaml
cat_n_dog/conf/optimizer/: sgd.yaml
cat_n_dog/conf/train/: default.yaml
cat_n_dog/config/: log.py  parameter.json  parameter.py
cat_n_dog/config_lagacy/: parameter.py
cat_n_dog/pre-work/: data_analysis.py  download_img.py
common/: preprocessing.py  split_data.py  test.py  train.py
img_processing/: main.py
ml_package/: metric.py  preprocessing.py  split_data.py  test.py
numpy_/: autoGrad.ipynb  basic.ipynb
