[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.13",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pypng>=0.20220715.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.23.0",
]
packages = [
    { include = "common" }
]
